data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1345.wast
;; 6. **Test Description:** Create a test where an imported function is called, containing a `loop` with a `br` instruction targeting the loop. Validate if the backward jump remains within expected stack constraints.    - **Constraint:** Validates the correct handling of backward branches within loops on imported functions.    - **Relation:** Examines whether backward branch targeting in loops is handled correctly across module boundaries.

(assert_invalid
  (module
    (import "env" "func" (func $imported))
    (func $test
      (block
        (loop
          (br 1)
        )
      )
    )
  )
  "unknown label"
)